add image in Category and images for GroupTours
